--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,17 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+
+/* navbar animation */
+.navbar__animation__open {
+  animation: navbar-animation 0.5s ease-in-out;
+}
+
+@keyframes navbar-animation {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
