--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ input[type='number'] {
 
 /* navbar animation */
 .navbar__animation__open {
-  animation: navbar-animation 0.5s ease-in-out;
+  animation: navbar-animation 0.5s;
 }
 
 @keyframes navbar-animation {
